Update the images

--- a/css/style.css
+++ b/css/style.css
@@ -399,8 +399,8 @@ ol {
 }
 
 .hero-section .hero-text span {
-	font-size: 16px;
-	color: #f44949;
+	font-size: 18px;
+	color: #fff;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
