footer logo update

--- a/css/style.css
+++ b/css/style.css
@@ -1159,7 +1159,9 @@ ol {
 }
 
 .footer-text .ft-logo {
-	margin-bottom: 20px;
+	height: 10%;
+	width: 10%;
+	/* margin-bottom: 20px; */
 }
 
 .footer-text .ft-logo a {
