--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,7 @@ ol {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	background-color: whitesmoke;
 }
 
 .header-section.header-normal {
@@ -279,10 +280,10 @@ ol {
 
 .logo {
 	float: left;
-	height: 10%;
-	width: 8%;
-	/* padding-top: 36px; */
-	/* padding-bottom: 37px; */
+	height: 15%;
+	width: 15%;
+	padding-top: 16px;
+	/* padding-bottom: 16px; */
 }
 
 .logo a {
@@ -393,12 +394,14 @@ ol {
 -----------------------*/
 
 .hero-section {
-	padding-top: 55px;
-	height: 65%;
+	/* padding-top: 55px; */
+	margin-top: 5%;
+	height: 95%;
+	overflow: hidden;
 }
 
 .hero-section .hero-text {
-	padding-top: 184px;
+	padding-top: 384px;
 }
 
 .hero-section .hero-text span {
@@ -484,6 +487,43 @@ ol {
 /*---------------------
   Home About Section
 -----------------------*/
+.hero-bg {
+    /* background-size: cover; */
+    /* background-position: center; */
+    height: 100%;
+}
+
+.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    height: 100%;
+}
+
+.swiper-wrapper {
+    height: 100%;
+}
+
+.swiper-pagination {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+    background-color: #fff;
+    opacity: 1;
+    margin: 0;
+}
+
+.swiper-pagination-bullet-active {
+    opacity: 1;
+}
 
 .home-about-section {
 	padding-bottom: 90px;
