--- a/css/styleForm.css
+++ b/css/styleForm.css
@@ -117,6 +117,16 @@
 	transform: rotate(90deg);
 }
 
+#preloder {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 999999;
+	background: #000;
+}
+
 .booking-form .form-label {
 	color: #fff;
 	font-size: 16px;
